--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="description" content="Hello this is my first web page!." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -181,7 +181,7 @@
               class="feature__backgroud__video feature__3__backgroud__video"
             >
               <source
-                src="c:\Users\lc\OneDrive\Mirzapur Munna Rap Whatsapp Status Video Download(BestStatusVideo.com).mp4"
+                src="Mirzapur Munna Rap Whatsapp Status Video Download(BestStatusVideo.com).mp4"
                 type="video/mp4"
               />
             </video>
@@ -338,6 +338,6 @@
       </div>
     </footer>
 
-    <script src="src/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
