--- a/index.html
+++ b/index.html
@@ -130,20 +130,20 @@
         </div>
         <div class="feature__image__container">
           <img
-            src="https://upload.wikimedia.org/wikipedia/en/d/dc/The_Family_Man.jpeg"
+            src="https://m.media-amazon.com/images/M/MV5BZDM2N2MyYTMtNWU3YS00OTdhLTg4NjQtZmFmN2U4MWZjNTc2XkEyXkFqcGdeQXVyMTA4MjY1NjMz._V1_FMjpg_UX1000_.jpg"
             alt="Feature image"
             class="feature__image"
           />
           <div class="feature__2__poster__container">
             <div class="poster__container">
               <img
-                src="https://upload.wikimedia.org/wikipedia/en/d/dc/The_Family_Man.jpeg"
+                src="https://m.media-amazon.com/images/M/MV5BZDM2N2MyYTMtNWU3YS00OTdhLTg4NjQtZmFmN2U4MWZjNTc2XkEyXkFqcGdeQXVyMTA4MjY1NjMz._V1_FMjpg_UX1000_.jpg"
                 alt="poster"
                 class="poster"
               />
             </div>
             <div class="poster__details">
-              <h4>Family Man</h4>
+              <h4>FGuns & Gulabs</h4>
               <h6>Downloading...</h6>
             </div>
             <div class="download__gif__container">
